--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
     "history": "^1.12.5",
     "html-webpack-plugin": "^1.6.2",
     "keycode": "^2.1.0",
+    "lodash": "^3.10.1",
+    "node-uuid": "^1.4.3",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
+    "react-redux": "^4.0.0",
     "react-relay": "^0.4.0",
     "react-router": "1.0.0-rc3",
     "react-router-relay": "^0.7.0",
+    "redux": "^3.0.4",
     "relay-local-schema": "^0.3.0",
     "style-loader": "^0.12.4",
     "todomvc-app-css": "^2.0.1",
