--- a/package.json
+++ b/package.json
@@ -26,18 +26,25 @@
     "html-webpack-plugin": "^1.6.2",
     "keycode": "^2.1.0",
     "lodash": "^3.10.1",
+    "material-ui": "^0.13.0",
     "node-uuid": "^1.4.3",
     "react": "^0.14.0",
+    "react-addons-create-fragment": "^0.14.0",
+    "react-addons-pure-render-mixin": "^0.14.0",
+    "react-addons-transition-group": "^0.14.0",
+    "react-addons-update": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-redux": "^4.0.0",
     "react-relay": "^0.4.0",
     "react-router": "1.0.0-rc3",
     "react-router-relay": "^0.7.0",
+    "react-tap-event-plugin": "^0.2.1",
     "redux": "^3.0.4",
     "relay-local-schema": "^0.3.0",
     "style-loader": "^0.12.4",
     "todomvc-app-css": "^2.0.1",
     "todomvc-common": "^1.0.2",
+    "validator": "^4.2.0",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.0"
   }
