--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-addons-transition-group": "^0.14.0",
     "react-addons-update": "^0.14.0",
     "react-dom": "^0.14.0",
+    "react-infinite": "^0.5.8",
     "react-redux": "^4.0.0",
     "react-relay": "^0.4.0",
     "react-router": "1.0.0-rc3",
