--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "babel-core": "^5.8.25",
     "babel-eslint": "^4.1.3",
     "babel-loader": "^5.3.2",
-    "babel-relay-plugin": "^0.3.0",
+    "babel-relay-plugin": "^0.7.1",
     "babel-runtime": "^5.8.25",
     "classnames": "^2.1.5",
     "css-loader": "^0.19.0",
@@ -26,7 +26,7 @@
     "html-webpack-plugin": "^1.6.2",
     "keycode": "^2.1.0",
     "lodash": "^3.10.1",
-    "material-ui": "^0.13.0",
+    "material-ui": "^0.14.4",
     "node-uuid": "^1.4.3",
     "react": "^0.14.0",
     "react-addons-create-fragment": "^0.14.0",
@@ -37,14 +37,12 @@
     "react-file-input": "^0.2.5",
     "react-infinite": "^0.5.8",
     "react-redux": "^4.0.0",
-    "react-relay": "^0.4.0",
-    "react-router": "1.0.0-rc3",
-    "react-router-relay": "^0.7.0",
+    "react-relay": "^0.7.1",
+    "react-router": "2.0.0",
+    "react-router-relay": "^0.9.0",
     "react-tap-event-plugin": "^0.2.1",
     "redux": "^3.0.4",
     "style-loader": "^0.12.4",
-    "todomvc-app-css": "^2.0.1",
-    "todomvc-common": "^1.0.2",
     "validator": "^4.2.0",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.0"
