--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-router-relay": "^0.9.0",
     "react-tap-event-plugin": "^0.2.1",
     "redux": "^3.0.4",
+    "socket.io-client": "^1.4.5",
     "style-loader": "^0.12.4",
     "validator": "^4.2.0",
     "webpack": "^1.12.2",
