--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-runtime": "^5.8.25",
     "classnames": "^2.1.5",
     "css-loader": "^0.19.0",
+    "diff": "^2.2.2",
     "eslint": "^1.6.0",
     "eslint-config-airbnb": "0.1.0",
     "eslint-plugin-react": "^3.5.1",
